--- a/_data/team.yml
+++ b/_data/team.yml
@@ -31,6 +31,15 @@
       url: /pdfs/people/Evan_L_Ray_CV.pdf
     - name: flaticon-laptop-1
       url: "http://www.mtholyoke.edu/~eray/"
+      
+      
+- name: Dongah Kim
+  role: Postdoctoral Researcher
+  description: |
+    Dongah is a Postdoctoral Researcher of Biostatistics at UMass-Amherst. 
+    She received his PhD in statistics from UMass-Amherst, developing methods to improve inference from dependent network data.
+  image: /images/people/Dongah.jpg
+  links: []
 
 # Student section (PhD, MS, undergrad students, in order of seniority)
 
